spec/e2e/operator/add_nil_nil.lit
nil + nil; # error: [line 1] Operands must be two numbers or two strings.
